--- a/src/lightning/badge/badge.css
+++ b/src/lightning/badge/badge.css
@@ -1,47 +1,31 @@
-.rainbow-badge {
-    color: #576574;
-    background-color: #e3e5ed;
-    border: 1px solid transparent;
-    display: -ms-inline-flexbox;
-    display: inline-flex;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -ms-flex-line-pack: center;
-    align-content: center;
-    -ms-flex-align: center;
-    align-items: center;
+.slds-badge {
+    background-color: #ecebea;
+    padding: 0.25rem 0.5rem;
+    border-radius: 15rem;
     font-size: 0.75rem;
+    font-weight: 700;
     line-height: normal;
-    text-transform: uppercase;
-    letter-spacing: 0.0625em;
-    padding: 0.25rem 0.75rem;
-    border-radius: 12rem;
-    overflow: hidden; }
-  
-  .rainbow-badge + .rainbow-badge {
-    margin-left: 0.5rem; }
-  
-  .rainbow-badge--lightest {
-    color: #576574;
-    background-color: #fff;
-    border: 1px solid #e3e5ed; }
-  
-  .rainbow-badge--brand {
-    color: #fff;
-    background-color: #01b6f5;
-    border: 1px solid transparent; }
-  
-  .rainbow-badge--outline-brand {
-    color: #01b6f5;
-    background-color: transparent;
-    border: 1px solid #01b6f5; }
-  
-  .rainbow-badge--inverse {
-    color: #fff;
-    background-color: #576574;
-    border: 1px solid transparent; }
-  
-  .rainbow-badge_content--truncate {
+    color: #080707;
     white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis; }
+}
+  
+.slds-badge + .slds-badge {
+    margin-left: 0.5rem;
+}
+  
+.slds-badge:empty {
+    padding: 0;
+}
+
+.slds-badge_inverse {
+    background-color: #706e6b;
+    color: white;
+}
+
+.slds-badge_lightest {
+    border: 1px solid #dddbda;
+    background-color: white;
+    font-size: 0.75rem;
+    text-transform: none;
+    letter-spacing: normal;
+}
