feat: update to use slds-legacy

--- a/src/lightning/button/button.css
+++ b/src/lightning/button/button.css
@@ -1,231 +1,1 @@
-.slds-button {
-    position: relative;
-    display: inline-block;
-    padding: 0;
-    background: transparent;
-    background-clip: border-box;
-    border: 1px solid transparent;
-    border-radius: 0.25rem;
-    line-height: 1.875rem;
-    text-decoration: none;
-    text-transform: none;
-    color: #0070d2;
-    cursor: pointer;
-    -webkit-appearance: none;
-    white-space: normal;
-    -webkit-user-select: none;
-       -moz-user-select: none;
-        -ms-user-select: none;
-            user-select: none;
-}
-
-.slds-button:hover, .slds-button:focus, .slds-button:active, .slds-button:visited {
-    text-decoration: none;
-}
-
-.slds-button:hover, .slds-button:focus {
-    color: #005fb2;
-}
-
-.slds-button:focus {
-    outline: 0;
-    box-shadow: 0 0 3px #0070D2;
-}
-
-.slds-button:active {
-    color: #005fb2;
-}
-
-.slds-button:disabled {
-    color: #dddbda;
-    cursor: default;
-}
-
-.slds-button:disabled * {
-    pointer-events: none;
-}
-
-.slds-button + .slds-button {
-    margin-left: 0.25rem;
-}
-
-.slds-button_neutral {
-    padding-left: 1rem;
-    padding-right: 1rem;
-    text-align: center;
-    vertical-align: middle;
-    border: 1px solid #dddbda;
-    transition: border 0.15s linear;
-    border-color: #dddbda;
-    background-color: white;
-}
-
-.slds-button_neutral:hover, .slds-button_neutral:focus {
-    background-color: #f4f6f9;
-}
-
-.slds-button_neutral:active {
-    background-color: #eef1f6;
-}
-
-.slds-button_neutral:disabled {
-    background-color: white;
-}
-
-.slds-button_brand {
-    padding-left: 1rem;
-    padding-right: 1rem;
-    text-align: center;
-    vertical-align: middle;
-    border: 1px solid #dddbda;
-    transition: border 0.15s linear;
-    background-color: #0070d2;
-    border-color: #0070d2;
-    color: white;
-}
-
-.slds-button_brand:link, .slds-button_brand:visited, .slds-button_brand:active {
-    color: white;
-}
-
-.slds-button_brand:hover, .slds-button_brand:focus {
-    background-color: #005fb2;
-    border-color: #005fb2;
-    color: white;
-}
-
-.slds-button_brand:active {
-    background-color: #005fb2;
-    border-color: #005fb2;
-}
-
-.slds-button_brand:disabled {
-    background: #c9c7c5;
-    border-color: #c9c7c5;
-    color: white;
-}
-
-.slds-button_outline-brand {
-    padding-left: 1rem;
-    padding-right: 1rem;
-    text-align: center;
-    vertical-align: middle;
-    border: 1px solid #dddbda;
-    transition: border 0.15s linear;
-    border-color: #dddbda;
-    background-color: white;
-    border-color: #0070d2;
-}
-
-.slds-button_outline-brand:hover, .slds-button_outline-brand:focus {
-    background-color: #f4f6f9;
-}
-
-.slds-button_outline-brand:active {
-    background-color: #eef1f6;
-}
-
-.slds-button_outline-brand:disabled {
-    border-color: #dddbda;
-    color: #dddbda;
-    background-color: white;
-}
-
-.slds-button_inverse {
-    padding-left: 1rem;
-    padding-right: 1rem;
-    text-align: center;
-    vertical-align: middle;
-    border: 1px solid #dddbda;
-    transition: border 0.15s linear;
-    background-color: transparent;
-    border-color: #dddbda;
-}
-
-.slds-button_inverse:disabled {
-    background-color: transparent;
-    border-color: rgba(255, 255, 255, 0.15);
-}
-
-.slds-button_inverse, .slds-button_inverse:link, .slds-button_inverse:visited {
-    color: #ecebea;
-}
-
-.slds-button_inverse:hover, .slds-button_inverse:focus, .slds-button_inverse:active {
-    color: #0070d2;
-}
-
-.slds-button_inverse:focus {
-    outline: none;
-    box-shadow: 0 0 3px #ecebea;
-    border: 1px solid #ecebea;
-}
-
-.slds-button_inverse:disabled {
-    color: rgba(255, 255, 255, 0.15);
-}
-
-.slds-button_destructive {
-    padding-left: 1rem;
-    padding-right: 1rem;
-    text-align: center;
-    vertical-align: middle;
-    border: 1px solid #dddbda;
-    transition: border 0.15s linear;
-    background-color: #c23934;
-    border-color: #c23934;
-    color: white;
-}
-
-.slds-button_destructive:link, .slds-button_destructive:visited, .slds-button_destructive:active {
-    color: white;
-}
-
-.slds-button_destructive:hover, .slds-button_destructive:focus {
-    background-color: #a61a14;
-    color: white;
-}
-
-.slds-button_destructive:active {
-    background-color: #870500;
-    border-color: #870500;
-}
-
-.slds-button_destructive:disabled {
-    background: #c9c7c5;
-    border-color: #c9c7c5;
-    color: white;
-}
-
-.slds-button_success {
-    padding-left: 1rem;
-    padding-right: 1rem;
-    text-align: center;
-    vertical-align: middle;
-    border: 1px solid #dddbda;
-    transition: border 0.15s linear;
-    background-color: #4bca81;
-    border-color: #4bca81;
-    color: #080707;
-}
-
-.slds-button_success:link, .slds-button_success:visited, .slds-button_success:active {
-    color: #080707;
-}
-
-.slds-button_success:hover, .slds-button_success:focus {
-    background-color: #04844b;
-    border-color: #04844b;
-    color: white;
-}
-
-.slds-button_success:active {
-    background-color: #04844b;
-    border-color: #04844b;
-}
-
-.slds-button_success:disabled {
-    background: #c9c7c5;
-    border-color: #c9c7c5;
-    color: white;
-}
+@import '@salesforce/slds/legacy';
