--- a/src/lightning/card/card.css
+++ b/src/lightning/card/card.css
@@ -1,100 +1,1 @@
-.slds-card {
-    position: relative;
-    padding: 0;
-    background: white;
-    border: 1px solid #dddbda;
-    border-radius: 0.25rem;
-    background-clip: padding-box;
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.1);
-}
-  
-.slds-card + .slds-card {
-    margin-top: 1rem;
-}
-
-.slds-card__header {
-    padding: 0.75rem 1rem 0;
-    margin: 0 0 0.75rem;
-}
-
-.slds-grid {
-    display: -ms-flexbox;
-    display: flex;
-}
-
-.slds-media {
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-align: start;
-        align-items: flex-start;
-}
-
-.slds-media_center {
-  -ms-flex-align: center;
-      align-items: center;
-}
-
-.slds-has-flexi-truncate {
-    -ms-flex: 1 1 0%;
-        flex: 1 1 0%;
-    min-width: 0;
-}
-
-.slds-media__figure {
-    -ms-flex-negative: 0;
-        flex-shrink: 0;
-    margin-right: 0.75rem;
-}
-
-.slds-media__body {
-    -ms-flex: 1;
-        flex: 1;
-    min-width: 0;
-}
-  
-.slds-media__body,
-.slds-media__body > :last-child {
-    margin-bottom: 0;
-}
-
-.slds-media__body > h2 {
-    font-weight: inherit;
-    font-size: 1em;
-    margin: 0;
-    padding: 0;
-}
-
-.slds-truncate {
-    max-width: 100%;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-}
-
-.slds-text-heading_small {
-    font-size: 1rem;
-    line-height: 1.25;
-}
-
-.slds-no-flex {
-    -ms-flex: none;
-        flex: none;
-}
-
-.slds-card__body {
-    margin-top: 0.75rem;
-    margin-bottom: 0.75rem;
-}
-
-.slds-card__body:empty,
-.slds-card__footer:empty {
-    display: none;
-}
-
-.slds-card__footer {
-    padding: 0.75rem 1rem;
-    margin-top: 0.75rem;
-    text-align: center;
-    font-size: 0.8125rem;
-    border-top: 1px solid #dddbda;
-}
+@import '@salesforce/slds/legacy';
