--- a/src/lightning/badge/badge.css
+++ b/src/lightning/badge/badge.css
@@ -1,31 +1,2 @@
-.slds-badge {
-    background-color: #ecebea;
-    padding: 0.25rem 0.5rem;
-    border-radius: 15rem;
-    font-size: 0.75rem;
-    font-weight: 700;
-    line-height: normal;
-    color: #080707;
-    white-space: nowrap;
-}
-  
-.slds-badge + .slds-badge {
-    margin-left: 0.5rem;
-}
-  
-.slds-badge:empty {
-    padding: 0;
-}
+@import '@salesforce/slds/legacy';
 
-.slds-badge_inverse {
-    background-color: #706e6b;
-    color: white;
-}
-
-.slds-badge_lightest {
-    border: 1px solid #dddbda;
-    background-color: white;
-    font-size: 0.75rem;
-    text-transform: none;
-    letter-spacing: normal;
-}
